Fixes a regression in the * placement when marking required fields, also improves its spacing off the side of the label

--- a/packages/styles/src/themes/_engrid-theme-flex2.scss
+++ b/packages/styles/src/themes/_engrid-theme-flex2.scss
@@ -50,7 +50,8 @@
             &:after {
                 content: "*";
                 color: var(--error__color);
-                margin-left: var(--fields_spacing-inline);
+                margin-left: calc(1ch * 0.25);
+                margin-right: auto;
             }
         }
     }
